--- a/templates/testresponse.html
+++ b/templates/testresponse.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <title>Smarter Hotline</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleresponse.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='testresponsecss.css') }}">
 </head>
 <body>
 <div class="container">
